 * units
   * added a wolf "monster"
 * WML engine
   * removed deprecated keys image_healing and image_halo_healing
   * empty user_description now remains empty unless generate_description set (bug 8522).
   * set_variable has the key time=stamp now, to get a timestamp in milliseconds
   * move some terrain masks definition in [game_config]
 * user interface:
   * fixed a lag in the path rendering when there is a lot of units
   * maps smaller than the screen are now shown centered on the screen
   * the movement hint now display a "(1)" turn to reach, if the unit
     will use all its movement points to reach this position
   * fixed bug with the number of turns to reach when crossing ZoC
   * allow to choose the direction from where attacking, even when you
     are just near the enemy unit.
   * ability to view a list of MP servers with the Join Game dialog
   * fixed blinking tooltips when clock is updated (bug #9209)
   * footsteps are now erased at the end of the unit's move
 * Miscellaneous and bugfixes
   * fix bug #4299: word wrap for menus with very long option strings
   * various bugfixes and code cleanups
   * removed zipios support
   * poisonned/stoned text is properly centered again
   * fix various bugs with stoned units, now no moves left and blind.
   
Version 1.3.3:
 * campaigns:
   * Northern Rebirth
     * Completed Scenario 'Ray of Hope'.
   * Sceptre of Fire:
     * imported from Wescamp
   * Son of the Black Eye:
     * Merged into mainline for testing.
   * Descent into Darkness
     * added to the pack
     * new Troll Shaman graphics
   * Under the Burning Suns
     * new WML in first and second scenario
     * tweaked second scenario map
     * removed a bunch of custom units
     * removed a bunch of custom terrains
     * new playable unit in scenario 2
     * new dehydration logic in scenario 2
     * new ambush logic in scenario 2
     * new Troll Shaman graphics
   * The South Guard
     * improved Deoran graphics